fixed gutter spacing and font things

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,5 @@
 html {
-  box-sizing: border-box;
-  font-family: "Overpass", sans-serif;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
+  font-family: Overpass, sans-serif;
 }
 
 body {
